# tm1_bench_py

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  config.ini  conftest.py  pyproject.toml  requirements.txt  sample.py
.claude/: settings.local.json
.claude/agents/: project-manager.md  tm1-bench-architect.md  tm1-test-engineer.md
.claude/commands/: architect.md  product-owner.md  test-engineer.md
.github/workflows/: build-test.yml  publish_to_pypi.yml
docs/: architecture.md  best-practices.md  cli-scope.md  cli-tasks.md  conf.py  index.md  model-reference.md  schema-reference.md  user-guide.md
schema/: config.yaml  schema.yaml  variables.yaml
schema/cubes/: AnalogicClientProperties.yaml  AnalogicModuleSecurity.yaml  Discount.yaml  FXRates.yaml  HeadCount.yaml  MappingKeyAccountManagerToOrganizationUnit.yaml  MappingProductToAccount.yaml  PersonalCost.yaml  PnL.yaml  Price.yaml  Sales.yaml
schema/datasets/: 02_account_attributes.yaml  05_product_attributes.yaml  (+15 more)
tests/: config.ini  output.csv  test_cli_config_resolution.py  test_cli_dry_run.py  test_cli_exit_codes.py  test_cli_parser.py  test_cli_validate.py  test_csv_dimension_integration.py  test_lookup_generator.py  test_schema_validation.py  test_unit.py  test_unit.yaml
tests_integration/: docker-compose.yml  test_cli_integration.py
tm1_bench_py/: __init__.py  __main__.py  cli.py  config.ini  df_generator_for_dataset.py  dimension_builder.py  dimension_period_builder.py  logging.json  sample.py  schema_validator.py  tm1_bedrock_executor.py  tm1_bench.py  tm1_bench.yaml  utility.py  utils.py
(+80 files in other folders)
